# token-2022

./: Cargo.toml
clients/cli/: Cargo.toml
clients/cli/src/: bench.rs  clap_app.rs  command.rs  config.rs  main.rs
clients/cli/tests/: command.rs
clients/rust/: Cargo.toml
clients/rust-legacy/: Cargo.toml
clients/rust-legacy/src/: lib.rs  token.rs
clients/rust-legacy/tests/: basic.rs  burn.rs  close_account.rs  confidential_mint_burn.rs  confidential_transfer.rs  confidential_transfer_fee.rs  cpi_guard.rs  default_account_state.rs  delegate.rs  freeze.rs  group_member_pointer.rs  group_pointer.rs  initialize_account.rs  initialize_mint.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  non_transferable.rs  pausable.rs  permanent_delegate.rs  program_test.rs  reallocate.rs  scaled_ui_amount.rs  sync_native.rs  token_group_initialize.rs  token_group_initialize_member.rs  token_group_update_authority.rs  token_group_update_max_size.rs  token_metadata_emit.rs  token_metadata_initialize.rs  token_metadata_remove_key.rs  token_metadata_update_authority.rs  token_metadata_update_field.rs  transfer.rs  transfer_fee.rs  transfer_hook.rs
confidential/ciphertext-arithmetic/: Cargo.toml
confidential/elgamal-registry/: Cargo.toml
confidential/elgamal-registry-interface/: Cargo.toml
confidential/proof-extraction/: Cargo.toml
confidential/proof-extraction/src/: lib.rs
confidential/proof-generation/: Cargo.toml
confidential/proof-generation/src/: withdraw.rs
confidential/proof-tests/: Cargo.toml
interface/: Cargo.toml
interface/src/: instruction.rs  pod.rs  state.rs
interface/src/extension/: mod.rs
interface/src/extension/token_metadata/: mod.rs
interface/src/extension/transfer_fee/: instruction.rs  mod.rs
program/: Cargo.toml
program/src/: offchain.rs  onchain.rs  pod_instruction.rs  processor.rs
program/src/extension/: reallocate.rs
program/src/extension/confidential_transfer/: processor.rs
program/src/extension/transfer_fee/: processor.rs
program/tests/: action.rs  assert_instruction_count.rs
