# The curve25519-dalek crate uses the `simd` backend by default in v4 if
# possible, which has very slow performance on some platforms with opt-level 0,
# which is the default for `dev` and `test` builds. This slowdown causes
# certain interactions in the solana-test-validator, such as verifying ZK
# proofs in transactions, to take much more than 400ms, creating problems in
# the test environment. To give better performance in the solana-test-validator
# during tests and dev builds, override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

[workspace]
resolver = "2"
members = [
  "clients/cli",
  #"clients/rust", omitted from workspace until a real client is generated
  "clients/rust-legacy",
  "confidential-transfer/ciphertext-arithmetic",
  "confidential-transfer/elgamal-registry",
  "confidential-transfer/proof-extraction",
  "confidential-transfer/proof-generation",
  "confidential-transfer/proof-tests",
  "program",
]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/token-2022"
homepage = "https://solana-program.com"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.cli]
solana = "2.1.0"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2024-08-08"
lint = "nightly-2024-08-08"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[patch.crates-io]
# solana-sdk
solana-program = { path = "../solana-sdk/program" }
solana-decode-error= { path = "../solana-sdk/decode-error" }
solana-clock = { path = "../solana-sdk/clock" }
solana-cpi = { path = "../solana-sdk/cpi" }
solana-frozen-abi = { path = "../solana-sdk/frozen-abi" }
solana-frozen-abi-macro = { path = "../solana-sdk/frozen-abi-macro" }
solana-instruction = { path = "../solana-sdk/instruction" }
solana-program-error = { path = "../solana-sdk/program-error" }
solana-pubkey = { path = "../solana-sdk/pubkey" }
solana-sysvar-id = { path = "../solana-sdk/sysvar-id" }
solana-borsh = { path = "../solana-sdk/borsh" }
solana-feature-set = { path = "../solana-sdk/feature-set" }
solana-loader-v3-interface = { path = "../solana-sdk/loader-v3-interface" }
solana-loader-v4-interface = { path = "../solana-sdk/loader-v4-interface" }
solana-account = { path = "../solana-sdk/account" }
solana-account-info = { path = "../solana-sdk/account-info" }
solana-bincode = { path = "../solana-sdk/bincode" }
solana-client-traits = { path = "../solana-sdk/client-traits" }
solana-cluster-type = { path = "../solana-sdk/cluster-type" }
solana-commitment-config = { path = "../solana-sdk/commitment-config" }
solana-epoch-info = { path = "../solana-sdk/epoch-info" }
solana-epoch-schedule = { path = "../solana-sdk/epoch-schedule" }
solana-example-mocks = { path = "../solana-sdk/example-mocks" }
solana-feature-gate-interface = { path = "../solana-sdk/feature-gate-interface" }
solana-fee-calculator = { path = "../solana-sdk/fee-calculator" }
solana-hash = { path = "../solana-sdk/hash" }
solana-inflation = { path = "../solana-sdk/inflation" }
solana-instructions-sysvar = { path = "../solana-sdk/instructions-sysvar" }
solana-keypair = { path = "../solana-sdk/keypair" }
solana-logger = { path = "../solana-sdk/logger" }
solana-message = { path = "../solana-sdk/message" }
solana-msg = { path = "../solana-sdk/msg" }
solana-nonce = { path = "../solana-sdk/nonce" }
solana-packet = { path = "../solana-sdk/packet" }
solana-program-entrypoint = { path = "../solana-sdk/program-entrypoint" }
solana-quic-definitions = { path = "../solana-sdk/quic-definitions" }
solana-rent = { path = "../solana-sdk/rent" }
solana-reward-info = { path = "../solana-sdk/reward-info" }
solana-sanitize = { path = "../solana-sdk/sanitize" }
solana-sdk = { path = "../solana-sdk/sdk" }
solana-sdk-ids = { path = "../solana-sdk/sdk-ids" }
solana-serde = { path = "../solana-sdk/serde" }
solana-serde-varint = { path = "../solana-sdk/serde-varint" }
solana-sha256-hasher = { path = "../solana-sdk/sha256-hasher" }
solana-short-vec = { path = "../solana-sdk/short-vec" }
solana-signature = { path = "../solana-sdk/signature" }
solana-signer = { path = "../solana-sdk/signer" }
solana-time-utils = { path = "../solana-sdk/time-utils" }
solana-transaction = { path = "../solana-sdk/transaction" }
solana-transaction-error = { path = "../solana-sdk/transaction-error" }
solana-epoch-rewards = { path = "../solana-sdk/epoch-rewards" }
solana-last-restart-slot = { path = "../solana-sdk/last-restart-slot" }
solana-slot-hashes = { path = "../solana-sdk/slot-hashes" }
solana-stable-layout = { path = "../solana-sdk/stable-layout" }
solana-sysvar = { path = "../solana-sdk/sysvar" }
solana-vote-interface = { path = "../solana-sdk/vote-interface" }
solana-big-mod-exp = { path = "../solana-sdk/big-mod-exp" }
solana-blake3-hasher = { path = "../solana-sdk/blake3-hasher" }
solana-bn254 = { path = "../solana-sdk/bn254" }
solana-keccak-hasher = { path = "../solana-sdk/keccak-hasher" }
solana-fee-structure = { path = "../solana-sdk/fee-structure" }
solana-nonce-account = { path = "../solana-sdk/nonce-account" }
solana-rent-debits = { path = "../solana-sdk/rent-debits" }
solana-secp256k1-program = { path = "../solana-sdk/secp256k1-program" }
solana-secp256r1-program = { path = "../solana-sdk/secp256r1-program" }
solana-define-syscall = { path = "../solana-sdk/define-syscall" }
solana-compute-budget-interface = { path = "../solana-sdk/compute-budget-interface" }
solana-genesis-config = { path = "../solana-sdk/genesis-config" }
solana-native-token = { path = "../solana-sdk/native-token" }
solana-derivation-path = { path = "../solana-sdk/derivation-path" }
solana-seed-derivable = { path = "../solana-sdk/seed-derivable" }
solana-seed-phrase = { path = "../solana-sdk/seed-phrase" }
solana-program-memory = { path = "../solana-sdk/program-memory" }
solana-program-option = { path = "../solana-sdk/program-option" }
solana-program-pack = { path = "../solana-sdk/program-pack" }
jupnet-bls-sdk = { path = "../solana-sdk/bls-sdk" }
solana-slot-history = { path = "../solana-sdk/slot-history" }
solana-hard-forks = { path = "../solana-sdk/hard-forks" }
solana-poh-config = { path = "../solana-sdk/poh-config" }


# solana
solana-account-decoder =  { path = "../account-decoder" }
solana-client =  { path = "../client" }
solana-cli-output =  { path = "../cli-output" }
solana-test-validator =  { path = "../test-validator" }
solana-transaction-status =  { path = "../transaction-status" }
solana-program-test =  { path = "../program-test" }
solana-zk-sdk =  { path = "../zk-sdk" }
solana-inline-spl =  { path = "../inline-spl" }
solana-clap-v3-utils =  { path = "../clap-v3-utils" }
solana-cli-config =  { path = "../cli-config" }
solana-remote-wallet =  { path = "../remote-wallet" }
solana-banks-interface =  { path = "../banks-interface" }
solana-rpc-client =  { path = "../rpc-client" }
solana-rpc-client-api =  { path = "../rpc-client-api" }
solana-builtins = { path = "../builtins" }
solana-bpf-loader-program = { path = "../programs/bpf_loader" }
solana-transaction-context = { path = "../transaction-context" }
solana-svm-rent-collector = { path = "../svm-rent-collector" }

spl-transfer-hook-interface = { path = "../transfer-hook/interface" }
spl-associated-token-account = { path = "../associated-token-account/program" }
spl-token-2022 = { path = "./program" }
spl-token = { path = "../token/program" }
spl-pod = { path = "../libraries/pod" }

jupnet-alt-bn128-bls = { path = "../solana-sdk/alt-bn128-bls" }
