# Reduce the size of debug builds
[profile.dev]
debug = "line-tables-only"

# The curve25519-dalek crate uses the `simd` backend by default in v4 if
# possible, which has very slow performance on some platforms with opt-level 0,
# which is the default for `dev` and `test` builds. This slowdown causes
# certain interactions in the solana-test-validator, such as verifying ZK
# proofs in transactions, to take much more than 400ms, creating problems in
# the test environment. To give better performance in the solana-test-validator
# during tests and dev builds, override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

[workspace]
resolver = "2"
members = [
  "clients/cli",
  #"clients/rust", omitted from workspace until a real client is generated
  "clients/rust-legacy",
  "confidential/ciphertext-arithmetic",
  "confidential/elgamal-registry",
  "confidential/elgamal-registry-interface",
  "confidential/proof-extraction",
  "confidential/proof-generation",
  # "confidential/proof-tests", # excluded due to mollusk-svm pulling incompatible crates.io packages
  "interface",
  "program",
]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/token-2022"
homepage = "https://solana-program.com"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("frozen-abi", "no-entrypoint", "custom-heap", "custom-panic"))',
]

[workspace.metadata.cli]
solana = "3.0.0"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.dependencies]
ethnum = "1.5.0"
solana-account-decoder = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-clap-v3-utils = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-cli-config = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-cli-output = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-client = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-commitment-config = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps" }
solana-logger = "3.0.0"
solana-remote-wallet = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-sdk = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps" }
solana-system-interface = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps" }
solana-transaction-status = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }

[patch.crates-io]
spl-token-confidential-transfer-proof-extraction = { path = "confidential/proof-extraction" }
spl-token-confidential-transfer-proof-generation = { path = "confidential/proof-generation" }
spl-token-2022-interface = { path = "interface" }
jupnet-signature = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps" }
jupnet-signer = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps" }
# Ensure consistent solana types across all dependencies
spl-pod = { git = "https://github.com/jupnet/libraries", branch = "fix/sdk-deps" }
spl-type-length-value = { git = "https://github.com/jupnet/libraries", branch = "fix/sdk-deps" }
spl-discriminator = { git = "https://github.com/jupnet/libraries", branch = "fix/sdk-deps" }
spl-token-group-interface = { git = "https://github.com/jupnet/token-group", branch = "fix/sdk-deps" }
spl-token-metadata-interface = { git = "https://github.com/jupnet/token-metadata", branch = "fix/sdk-deps" }
spl-transfer-hook-interface = { git = "https://github.com/jupnet/transfer-hook", branch = "fix/sdk-deps" }
spl-memo-interface = { git = "https://github.com/jupnet/memo", branch = "fix/sdk-deps" }
# Patch solana crates to use jupnet versions
solana-account-decoder = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-client = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-transaction-status = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-rpc-client = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-rpc-client-api = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/v3.1.2-script-build" }
solana-config-interface = { git = "https://github.com/jupnet/config", branch = "fix/sdk-deps" }
solana-stake-interface = { git = "https://github.com/jupnet/stake", branch = "fix/sdk-deps" }
spl-token-interface = { git = "https://github.com/jupnet/token", branch = "fix/token-tests" }
spl-generic-token = { git = "https://github.com/jupnet/libraries", branch = "fix/sdk-deps" }
spl-associated-token-account-interface = { git = "https://github.com/jupnet/associated-token-account", branch = "fix/sdk-deps" }
spl-record = { git = "https://github.com/jupnet/record", branch = "fix/sdk-deps" }

[patch."https://github.com/jupnet/zk-elgamal-proof"]
solana-zk-sdk = { path = "../zk-elgamal-proof/zk-sdk" }
