[package]
name = "spl-token-2022"
version = "10.0.0"
description = "Solana Program Library Token 2022"
documentation = "https://docs.rs/spl-token-2022"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []
test-sbf = []
serde-traits = ["dep:serde", "dep:serde_with", "dep:base64", "spl-pod/serde-traits", "spl-token-2022-interface/serde"]
default = ["zk-ops"]
# Remove this feature once the underlying syscalls are released on all networks
zk-ops = []

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.24.0", features = ["derive"] }
ethnum = { workspace = true }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.5"
solana-account-info = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-clock = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-cpi = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-instruction = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-msg = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-program-entrypoint = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-program-error = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-program-memory = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-program-option = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-program-pack = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-pubkey = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-rent = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-sdk-ids = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-security-txt = "1.1.1"
solana-sysvar = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main", features = ["bincode"] }
solana-system-interface = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main", features = ["bincode"] }
solana-zk-sdk = { git = "https://github.com/jupnet/zk-elgamal-proof", branch = "jupnet" }
spl-elgamal-registry-interface = { version = "0.1.0", path = "../confidential/elgamal-registry-interface" }
spl-memo-interface = { git = "https://github.com/jupnet/memo", branch = "jupnet" }
spl-token-2022-interface = { version = "2.1.0", path = "../interface" }
spl-token-confidential-transfer-ciphertext-arithmetic = { version = "0.4.1", path = "../confidential/ciphertext-arithmetic" }
spl-token-confidential-transfer-proof-extraction = { version = "0.5.1", path = "../confidential/proof-extraction" }
spl-token-group-interface = { git = "https://github.com/jupnet/token-group", branch = "fix/sdk-deps" }
spl-token-metadata-interface = { git = "https://github.com/jupnet/token-metadata", branch = "fix/sdk-deps" }
spl-transfer-hook-interface = { git = "https://github.com/jupnet/transfer-hook", branch = "jupnet" }
spl-pod = { git = "https://github.com/jupnet/libraries", branch = "fix/sdk-deps" }
thiserror = "^2.0"
serde = { version = "^1.0", optional = true }
serde_with = { version = "3.15.1", optional = true }
base64 = { version = "0.22.1", optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
spl-token-confidential-transfer-proof-generation = { version = "0.5.1", path = "../confidential/proof-generation" }

[dev-dependencies]
lazy_static = "1.5.0"
proptest = "1.9"
serial_test = "3.2.0"
solana-account = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-hash = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-keypair = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-program-test = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-signer = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-transaction = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-transaction-error = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
spl-tlv-account-resolution = { git = "https://github.com/jupnet/libraries", branch = "fix/sdk-deps" }
serde_json = "1.0.145"
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb"
