[package]
name = "spl-token-cli"
version = "5.5.0"
description = "SPL-Token Command-line Utility"
documentation = "https://docs.rs/spl-token-cli"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[build-dependencies]
walkdir = "2"

[dependencies]
ethnum = { workspace = true }
base64 = "0.22.1"
clap = "3.2.23"
console = "0.16.1"
futures = "0.3"
serde = "^1.0"
serde_derive = "1.0.103"
serde_json = "1.0.145"
solana-account-decoder = { workspace = true }
solana-clap-v3-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-cli-output = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-logger = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-sdk = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction-status = { workspace = true }
spl-associated-token-account-interface = { version = "2.0.0" }
spl-pod = { version = "0.7.1" }
spl-token-interface = { git = "https://github.com/jupnet/token", branch = "fix/sdk-deps" }
spl-token-2022-interface = { version = "2.0.0", path = "../../interface" }
spl-token-2022 = { version = "10.0.0", path = "../../program", features = ["no-entrypoint"] }
spl-token-client = { version = "0.18.0", path = "../rust-legacy" }
spl-token-confidential-transfer-proof-generation = { version = "0.5.0", path = "../../confidential/proof-generation" }
spl-token-metadata-interface = { git = "https://github.com/jupnet/token-metadata", branch = "fix/sdk-deps" }
spl-token-group-interface = { git = "https://github.com/jupnet/token-group", branch = "fix/sdk-deps" } 
spl-memo-interface = "2.0.0"
strum = "0.27"
strum_macros = "0.27"
tokio = "1.48"

[dev-dependencies]
solana-nonce = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-test-validator = "3.0.0"
assert_cmd = "2.1.1"
libtest-mimic = "0.8"
serial_test = "3.2.0"
tempfile = "3.23.0"

[[bin]]
name = "spl-token"
path = "src/main.rs"

[[test]]
name = "command"
path = "tests/command.rs"
harness = false
